--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.reflections:reflections:0.9.12'
 	implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.7'
+	implementation 'com.google.guava:guava-gwt:30.1-jre'
 	implementation gradleApi()
 }
 
